# tensor-ffn

./: .gitignore  README.md
inference/: BUILD.md  CMakeLists.txt
inference/include/backend/: cuda_ops.h  memory.h
inference/include/io/: checkpoint.h  safetensors.h  tokenizer.h
inference/include/model/: expert.h  qwen.h
inference/src/: main.cpp
inference/src/backend/: cuda_ops.cu  memory.cpp
inference/src/io/: checkpoint.cpp  safetensors.cpp  tokenizer.cpp
inference/src/model/: expert.cu  qwen.cu  rmsnorm.cpp
tools/: check_dtype.py  inspect_corpus.py  tokenize_correctly.py
trainer/: BUILD.md  CMakeLists.txt
trainer/include/backend/: cuda_ops.h  memory.h
trainer/include/io/: checkpoint.h  corpus.h  safetensors.h  tokenizer.h
trainer/include/model/: ffn_expert.h  qwen.h  rmsnorm.h  rope.h
trainer/include/training/: loss.h  optimizer.h  trainer.h
trainer/src/: main.cpp
trainer/src/backend/: cuda_ops.cu  memory.cpp
trainer/src/io/: checkpoint.cpp  corpus.cpp  safetensors.cpp  tokenizer.cpp
trainer/src/model/: ffn_expert.cu  qwen.cpp  qwen.cu  rmsnorm.cpp
trainer/src/training/: loss.cpp  optimizer.cpp  optimizer.cu  trainer.cpp
